--- a/Tusk/UI/UI.vcxproj
+++ b/Tusk/UI/UI.vcxproj
@@ -64,10 +64,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Input.h" />
     <ClInclude Include="Output.h" />
     <ClInclude Include="UI.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Input.cpp" />
     <ClCompile Include="Output.cpp" />
     <ClCompile Include="UI.cpp" />
   </ItemGroup>
