--- a/Tusk/Tusk/Tusk.vcxproj
+++ b/Tusk/Tusk/Tusk.vcxproj
@@ -78,6 +78,9 @@
       <Project>{1d6782ca-f6d8-4179-a14f-e1b382011c58}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Main.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
