new project common

--- a/Tusk/Common/Common.vcxproj.filters
+++ b/Tusk/Common/Common.vcxproj.filters
@@ -15,7 +15,18 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp">
+    <ClInclude Include="..\Tusk\Command.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Tusk\Task.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\Tusk\Command.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Tusk\Task.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
