--- a/Tusk/Logic/Logic.vcxproj
+++ b/Tusk/Logic/Logic.vcxproj
@@ -44,6 +44,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>C:\Users\Dan\Desktop\Tusk\Tusk\Tusk\Storage;C:\Users\Dan\Desktop\Tusk\Tusk\Tusk\Parser;C:\Users\Dan\Desktop\Tusk\Tusk\Tusk\Tusk;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
