--- a/Tusk/Storage/Storage.vcxproj
+++ b/Tusk/Storage/Storage.vcxproj
@@ -70,6 +70,11 @@
   <ItemGroup>
     <ClCompile Include="Storage.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.vcxproj">
+      <Project>{72856830-0b2b-459d-abcf-9d3289508c99}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
