--- a/Tusk/Common/Common.vcxproj
+++ b/Tusk/Common/Common.vcxproj
@@ -12,11 +12,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Command.h" />
+    <ClInclude Include="Date.h" />
     <ClInclude Include="Task.h" />
+    <ClInclude Include="Time.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Command.cpp" />
+    <ClCompile Include="Date.cpp" />
     <ClCompile Include="Task.cpp" />
+    <ClCompile Include="Time.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{72856830-0B2B-459D-ABCF-9D3289508C99}</ProjectGuid>
