UI and main updates

--- a/Tusk/UI/UI.vcxproj.filters
+++ b/Tusk/UI/UI.vcxproj.filters
@@ -18,10 +18,7 @@
     <ClInclude Include="UI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Input.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Output.h">
+    <ClInclude Include="ViewUI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -29,10 +26,7 @@
     <ClCompile Include="UI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Input.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Output.cpp">
+    <ClCompile Include="ViewUI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
