--- a/Tusk/Tusk/Tusk.vcxproj
+++ b/Tusk/Tusk/Tusk.vcxproj
@@ -44,7 +44,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>..\Common;..\Storage;..\Parser;..\Logic;..\UI;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\UI;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -65,18 +65,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Common\Common.vcxproj">
-      <Project>{72856830-0b2b-459d-abcf-9d3289508c99}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Logic\Logic.vcxproj">
-      <Project>{53548685-4ebb-4901-a6e5-1b173c543157}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Parser\Parser.vcxproj">
-      <Project>{346e4fe7-48b3-4594-933d-a29f3fb3860d}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Storage\Storage.vcxproj">
-      <Project>{b5589058-8896-4cd2-893f-05057499e3a8}</Project>
-    </ProjectReference>
     <ProjectReference Include="..\UI\UI.vcxproj">
       <Project>{1d6782ca-f6d8-4179-a14f-e1b382011c58}</Project>
     </ProjectReference>
