--- a/Tusk/UI/UI.vcxproj
+++ b/Tusk/UI/UI.vcxproj
@@ -44,7 +44,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>..\Common;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\Logic;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -65,18 +65,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Input.h" />
-    <ClInclude Include="Output.h" />
     <ClInclude Include="UI.h" />
+    <ClInclude Include="ViewUI.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Input.cpp" />
-    <ClCompile Include="Output.cpp" />
     <ClCompile Include="UI.cpp" />
+    <ClCompile Include="ViewUI.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Common\Common.vcxproj">
-      <Project>{72856830-0b2b-459d-abcf-9d3289508c99}</Project>
+    <ProjectReference Include="..\Logic\Logic.vcxproj">
+      <Project>{53548685-4ebb-4901-a6e5-1b173c543157}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
