--- a/Tusk/Common/Common.vcxproj
+++ b/Tusk/Common/Common.vcxproj
@@ -11,7 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Definition.h" />
+    <ClInclude Include="Definitions.h" />
     <ClInclude Include="Date.h" />
     <ClInclude Include="Task.h" />
     <ClInclude Include="Time.h" />
