--- a/Tusk/Logic/Logic.vcxproj
+++ b/Tusk/Logic/Logic.vcxproj
@@ -80,6 +80,7 @@
     <ClInclude Include="Command.h" />
     <ClInclude Include="CommandExecutor.h" />
     <ClInclude Include="Delete.h" />
+    <ClInclude Include="Display.h" />
     <ClInclude Include="Logic.h" />
   </ItemGroup>
   <ItemGroup>
@@ -87,6 +88,7 @@
     <ClCompile Include="Command.cpp" />
     <ClCompile Include="CommandExecutor.cpp" />
     <ClCompile Include="Delete.cpp" />
+    <ClCompile Include="Display.cpp" />
     <ClCompile Include="Logic.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
