--- a/Tusk/Logic/Logic.vcxproj
+++ b/Tusk/Logic/Logic.vcxproj
@@ -81,6 +81,7 @@
     <ClInclude Include="CommandExecutor.h" />
     <ClInclude Include="Delete.h" />
     <ClInclude Include="Display.h" />
+    <ClInclude Include="Edit.h" />
     <ClInclude Include="Logic.h" />
   </ItemGroup>
   <ItemGroup>
@@ -89,6 +90,7 @@
     <ClCompile Include="CommandExecutor.cpp" />
     <ClCompile Include="Delete.cpp" />
     <ClCompile Include="Display.cpp" />
+    <ClCompile Include="Edit.cpp" />
     <ClCompile Include="Logic.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
