--- a/Tusk/Common/Common.vcxproj
+++ b/Tusk/Common/Common.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CommandType.h" />
     <ClInclude Include="Date.h" />
     <ClInclude Include="Task.h" />
     <ClInclude Include="Time.h" />
