--- a/Tusk/Common/Common.vcxproj.filters
+++ b/Tusk/Common/Common.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Date.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CommandType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Task.cpp">
