--- a/Tusk/Logic/Logic.vcxproj
+++ b/Tusk/Logic/Logic.vcxproj
@@ -44,7 +44,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>..\Parser;..\Storage;..\Common;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\User\Downloads\Desktop\Tusk\Tusk\Storage;C:\Users\User\Downloads\Desktop\Tusk\Tusk\Parser;C:\Users\User\Downloads\Desktop\Tusk\Tusk\Common;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
