--- a/Tusk/Logic/Logic.vcxproj
+++ b/Tusk/Logic/Logic.vcxproj
@@ -44,7 +44,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\User\Downloads\Desktop\Tusk\Tusk\Storage;C:\Users\User\Downloads\Desktop\Tusk\Tusk\Parser;C:\Users\User\Downloads\Desktop\Tusk\Tusk\Common;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\Storage;..\Parser;..\Common;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -65,17 +65,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Common\Common.vcxproj">
-      <Project>{72856830-0b2b-459d-abcf-9d3289508c99}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Parser\Parser.vcxproj">
-      <Project>{346e4fe7-48b3-4594-933d-a29f3fb3860d}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Storage\Storage.vcxproj">
-      <Project>{b5589058-8896-4cd2-893f-05057499e3a8}</Project>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="Add.h" />
     <ClInclude Include="Command.h" />
     <ClInclude Include="Delete.h" />
@@ -92,6 +81,17 @@
     <ClCompile Include="Edit.cpp" />
     <ClCompile Include="Logic.cpp" />
     <ClCompile Include="Search.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.vcxproj">
+      <Project>{72856830-0b2b-459d-abcf-9d3289508c99}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\Parser\Parser.vcxproj">
+      <Project>{346e4fe7-48b3-4594-933d-a29f3fb3860d}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\Storage\Storage.vcxproj">
+      <Project>{b5589058-8896-4cd2-893f-05057499e3a8}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
