--- a/SE-Planner/Parser/Parser.vcxproj.filters
+++ b/SE-Planner/Parser/Parser.vcxproj.filters
@@ -21,12 +21,24 @@
     <ClInclude Include="CommandTypeParser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TimeParser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DateParser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Parser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CommandTypeParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TimeParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DateParser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
