--- a/SE-Planner/Parser/Parser.vcxproj
+++ b/SE-Planner/Parser/Parser.vcxproj
@@ -72,13 +72,17 @@
   <ItemGroup>
     <ClInclude Include="CommandTypeParser.h" />
     <ClInclude Include="DateParser.h" />
+    <ClInclude Include="DisplayTypeParser.h" />
     <ClInclude Include="Parser.h" />
+    <ClInclude Include="TaskParser.h" />
     <ClInclude Include="TimeParser.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CommandTypeParser.cpp" />
     <ClCompile Include="DateParser.cpp" />
+    <ClCompile Include="DisplayTypeParser.cpp" />
     <ClCompile Include="Parser.cpp" />
+    <ClCompile Include="TaskParser.cpp" />
     <ClCompile Include="TimeParser.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
