--- a/SE-Planner/Common/Common.vcxproj
+++ b/SE-Planner/Common/Common.vcxproj
@@ -66,12 +66,12 @@
   <ItemGroup>
     <ClInclude Include="Date.h" />
     <ClInclude Include="Task.h" />
-    <ClInclude Include="Time.h" />
+    <ClInclude Include="MyTime.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Date.cpp" />
     <ClCompile Include="Task.cpp" />
-    <ClCompile Include="Time.cpp" />
+    <ClCompile Include="MyTime.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
