--- a/SE-Planner/Control/Control.vcxproj
+++ b/SE-Planner/Control/Control.vcxproj
@@ -76,12 +76,22 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Command.h" />
-    <ClInclude Include="Control.h" />
+    <ClCompile Include="Add.cpp" />
+    <ClCompile Include="Command.cpp" />
+    <ClCompile Include="Delete.cpp" />
+    <ClCompile Include="Display.cpp" />
+    <ClCompile Include="Edit.cpp" />
+    <ClCompile Include="Logic.cpp" />
+    <ClCompile Include="Search.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Command.cpp" />
-    <ClCompile Include="Control.cpp" />
+    <ClInclude Include="Add.h" />
+    <ClInclude Include="Command.h" />
+    <ClInclude Include="Delete.h" />
+    <ClInclude Include="Display.h" />
+    <ClInclude Include="Edit.h" />
+    <ClInclude Include="Logic.h" />
+    <ClInclude Include="Search.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
